# rapid-assistant

./: .gitignore  LICENSE  README.md  benchmark_faq.py  index_faq.py  main.py  pyproject.toml
docs/: faq.md
rag/: ingest.py  query_engine.py
src/: config.py  logging_config.py  main.py
src/agent/: graph.py  rag_retriever.py  tool_registry.py  user_profile.py
src/agent/memory/: __init__.py  base.py  llm_decider.py  longer_term.py  prompt.py
src/agent/nodes/: __init__.py  call_rag.py  call_tool.py  enrich_context.py  execute_step.py  finalize.py  plan.py  receive_input.py
src/eval/: benchmark.py
src/ingest/: index.py  watcher.py
src/rag/: query_engine.py  vector_store.py
src/tools/: __init__.py  datetime_tool.py  math_tool.py  memory_tool.py
