[project]
name = "rapid-assistant"
version = "0.1.0"
description = ""
authors = [
    {name = "Salvador Oliveira",email = "slsalvadorlucas@gmail.com"}
]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain (>=0.3.25,<0.4.0)",
    "langchain-openai (>=0.3.22,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
    "chromadb (>=1.0.12,<2.0.0)",
    "langchain-community (>=0.3.25,<0.4.0)",
    "tiktoken (>=0.9.0,<0.10.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "protobuf (>=3.20.3,<4.0.0)",
    "langchain-huggingface (>=0.3.0,<0.4.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "langchain-chroma (>=0.2.4,<0.3.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "langgraph (>=0.4.8,<0.5.0)",
    "structlog (>=25.4.0,<26.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.0"
pre-commit = "^4.2.0"

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100", "D101", "D102", "D103", "D104", "D203", "D213", "COM812", "E501"]

[tool.ruff.format]
quote-style = "double"
